--- a/index.html
+++ b/index.html
@@ -1,23 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Leticia Torres</title>
-    <!--titulo de la pestaña de ña p+agina web html-->
+   <!--datos ocultos para el usuario e importantes para la pág-->
+    <title>Pizza&from</title> 
+    <!--nombre de la solapa de la página-->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<!--cierre del head para guardar toda la información dl doc.como codigo, el titulo a mostar en la pestaña del navegador entr otros datos que no será vistos por el usuario-->
 
 <body>
-    <!--contiene todas la etiquetas que generan contenido visualen la págnia para el usuario-->
     <header>
-        <!--ENCABEZADO-->
-        <div><img src="./img/20200221_082630.jpg" width="110" height="120" </div>
-
-        <h1>CURRICULUM VITAE DE lETICIA TORRES</h1>
-        <link rel="stylesheet" href=".css/style.css" >
-        <p  </p>
+        <img src="./img/Logo.png" alt="">
+        <nav>
+            <ul>
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Ranking</a>
+                </li>
+                <li>
+                    <a href="">Promoción</a>
+                </li>
+                <li>
+                    <a href="">Contacto</a>
+                </li>
+            </ul>
+        </nav>
     </header>
+
+<main>
+    <section>
+                <article class="box1">
+                    <h2 class="texto">Envio gratis <span>comprando</span> 2 pizzas<h2>
+                </article>
+        <!--nombre de la caja derecha -->
+        <div class="box2">
+            <h2>Podio de pizzas</h2>
+
+            <div class="top5">
+                <div>
+                    <h3>Pizas Top 5</h3>
+                    <ol>
+                        <li>Muzarella</li>
+                        <li>Hawaiana</li>
+                        <li>Muzarella J&morrón</li>
+                        <li>Fugazzeta</li>
+                        <li>Calabresa</li>
+                    </ol>
+                </div>
+                <img src="./img/Pizza.jpg" alt="">
+            </div>            
+        </div>
+    </section>
+
+</main>
+
+
+<footer>
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Contacto</a></li>
+            <li><a href="">Ranking</a></li>
+            <li><a href="">Promoción</a></li>
+        </ul>
+    </nav>
+ <div class="pie">
+        <img src="./img/Logo.png" alt="">
+      <span class="Pizza"></span>
+</footer>
 </body>
 </html>
